--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,40 @@
+/* Global Styles */
+* {
+    box-sizing: border-box;
+}
+
+.wrapper {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+/* Header */
+.header {
+    font-size: 50px;
+    padding-top: 20px;
+    font-weight: lighter;
+    color: #D3D3D3;
+}
+
+hr {
+    text-align: center;
+    color: #D3D3D3;
+}
+
 /*Gallery Styles*/
+
 ul {
-	list-style:none;
-	margin: 0 auto;
-	padding: 0;
-	display: block;
-	max-width: 980px;
-	text-align: center;
+    list-style:none;
+    margin: 0 auto;
+    padding: 0;
+    display: block;
+    text-align: center;
 }
 ul li {
-	display: inline-block;
-	padding: 8px;
-	margin:10px;
+    display: inline-block;
+    padding: 8px;
+    margin:10px;
 }
 ul li img {
-	display: block;
+    display: block;
 }
