--- a/css/styles.css
+++ b/css/styles.css
@@ -7,34 +7,57 @@
     margin-left: 30px;
     margin-right: 30px;
 }
+h3 {
+  color: #ffd700;
+  font-size: 10px;
+}
+body {
+  background: url('../img/abstract-background-design_1100-237.jpg');
+  background-color: #2E0854;
+  background-repeat: repeat;
+  color: #ffd700;
+}
 
 /* Header */
 .header {
     font-size: 50px;
     padding-top: 20px;
+    padding-left: 10px;
     font-weight: lighter;
-    color: #D3D3D3;
+    color: #ffd700;
 }
 
 hr {
     text-align: center;
-    color: #D3D3D3;
+    border-color: #ffd700;
 }
 
 /*Gallery Styles*/
 
 ul {
-    list-style:none;
-    margin: 0 auto;
+    list-style: none;
+    margin: 25px auto 0;
     padding: 0;
-    display: block;
-    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
-ul li {
-    display: inline-block;
-    padding: 8px;
-    margin:10px;
-}
+
 ul li img {
     display: block;
+    height: 400px;
+    width: 100%;
+    border: solid 3px #ffd700;
+}
+li {
+	margin: 15px 20px;
+	padding: 0;
+	text-align: center;
+	transition: all .2s ease-in-out;
+	cursor: pointer;
+}
+
+li:hover {
+    transform: scale(1.1);
 }
