--- a/css/styles.css
+++ b/css/styles.css
@@ -3,37 +3,49 @@
     box-sizing: border-box;
 }
 
-.wrapper {
-    margin-left: 30px;
-    margin-right: 30px;
+#wrapper {
+    margin: 0 auto;
+    width: 90%;
 }
+
 h3 {
   color: #ffd700;
-  font-size: 10px;
+  font-size: 14px;
 }
+
 body {
   background: url('../img/abstract-background-design_1100-237.jpg');
-  background-color: #2E0854;
+  background-color: #000026;
   background-repeat: repeat;
   color: #ffd700;
+  position: relative;
+}
+
+p {
+  font-size: 14px;
+  text-align: center;
+  padding: 5px 5px;
 }
 
 /* Header */
 .header {
-    font-size: 50px;
+    font-size: 1.5em;
     padding-top: 20px;
-    padding-left: 10px;
+    margin: 0 5% 0;
     font-weight: lighter;
     color: #ffd700;
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
 }
 
 hr {
     text-align: center;
     border-color: #ffd700;
+    width: 90%
 }
 
 /*Gallery Styles*/
-
 ul {
     list-style: none;
     margin: 25px auto 0;
@@ -50,14 +62,95 @@ ul li img {
     width: 100%;
     border: solid 3px #ffd700;
 }
+
 li {
-	margin: 15px 20px;
-	padding: 0;
-	text-align: center;
-	transition: all .2s ease-in-out;
-	cursor: pointer;
+    margin: 15px 20px;
+    padding: 0;
+    text-align: center;
+    transition: all .2s ease-in-out;
+    cursor: pointer;
 }
 
 li:hover {
-    transform: scale(1.1);
+    transform: scale(1.2);
+}
+
+/*OVERLAY*/
+.hidden {
+    display: none;
+}
+
+#overlay {
+    background-color: rgba(0,0,0,.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    text-align: center;
+    display: none;
+    z-index: 1;
+    position: absolute;
+}
+
+#card {
+    width: 90%;
+    margin: 0 auto;
+    z-index: 2;
+    position: absolute;
+    top: 10px;
+    left: 5.5%;
+    display: inline-block;
+    transition: background-color .5s ease-in;
+    background-color: #000026;
+    border-radius: 5px;
+}
+
+#card img {
+    display: block;
+    margin: 10px auto;
+    border: solid 3px #ffd700;
+}
+
+#card img:hover {
+    transition: filter .5s ease-out;
+    filter: invert(100%);
+}
+
+/*Media Queries*/
+
+@media screen and (min-width: 425px) {
+
+  header.header {
+    font-size: 30px;
+  }
+  #card {
+    top: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  header.header {
+    font-size: 50px;
+    margin: 0 5% 0;
+  }
+
+  #card {
+      width: 80%;
+      left: 10%;
+      top: 50px;
+  }
+
+  #card span {
+      font-size: 1em;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+
+  #card img {
+      display: block;
+      margin: 10px auto;
+      border: solid 3px #ffd700;
+  }
 }
