--- a/css/styles.css
+++ b/css/styles.css
@@ -13,22 +13,23 @@
 }
 
 h3 {
-  color: #ffd700;
-  font-size: 14px;
+    color: #ffd700;
+    font-size: 14px;
 }
 
 body {
-  background: url('../img/abstract-background-design_1100-237.jpg');
-  background-color: #000026;
-  background-repeat: repeat;
-  color: #ffd700;
-  position: relative;
+    background: url('../img/abstract-background-design_1100-237.jpg');
+    background-color: #000026;
+    background-repeat: repeat;
+    color: #ffd700;
+    position: relative;
+    font-family: 'Fjalla One';
 }
 
 p {
-  font-size: 14px;
-  text-align: center;
-  padding: 5px 5px;
+    font-size: 14px;
+    text-align: center;
+    padding: 5px 5px;
 }
 
 /* Header */
@@ -40,7 +41,7 @@ p {
     color: #ffd700;
     display: flex;
     justify-content: space-between;
-    text-align: left;
+    text-align: center;
 }
 
 hr {
@@ -50,15 +51,39 @@ hr {
 }
 
 #flickrHeader {
-  font-size: 1.5em;
-  padding-top: 20px;
-  margin: 0 5% 0;
-  font-weight: lighter;
-  color: #ffd700;
-  display: flex;
-  justify-content: space-between;
-  text-align: left;
+    font-size: 1.5em;
+    padding-top: 20px;
+    margin: 0 5% 0;
+    font-weight: lighter;
+    color: #ffd700;
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
 }
+
+/*Button Style*/
+#dateSort,
+#yearSort {
+    padding: 5px;
+    width: 100px;
+    height: 50px;
+    border-radius: 5px;
+    background-color: #ffd700;
+    border-color: #ffd700;
+    color:  #660198;
+    margin-bottom: 20px;
+    margin-left: 5px;
+    align-self: center;
+}
+
+button#dateSort.sortButton {
+    font-size: 18px;
+    align-self: center;
+}
+button#yearSort.sortButton {
+    font-size: 18px;
+    align-self: center;
+  }
 
 /*Gallery Styles*/
 ul {
@@ -134,6 +159,8 @@ li:hover {
     transition: filter .5s ease-out;
     filter: invert(100%);
 }
+/* Arrows */
+
 
 /*Media Queries*/
 
@@ -141,6 +168,7 @@ li:hover {
 
   header.header {
     font-size: 30px;
+    text-align: left;
   }
   #flickrHeader {
     font-size: 30px;
@@ -154,6 +182,7 @@ li:hover {
   header.header {
     font-size: 50px;
     margin: 0 5% 0;
+    text-align: left;
   }
   #flickrHeader {
     font-size: 50px;
@@ -161,15 +190,30 @@ li:hover {
   }
 
   #card {
-      width: 80%;
-      height: 7%;
-      left: 10%;
-      top: 50px;
+    width: 80%;
+    height: 7%;
+    left: 10%;
+    top: 50px;
   }
 
   #card span {
-      font-size: 1em;
+    font-size: 1em;
   }
+
+  #dateSort,
+  #yearSort {
+    margin: 0;
+    text-align: center;
+    transition: all 1s ease;
+    display: flex;
+    justify-content: space-between;
+}
+
+  #dateSort:hover,
+  #yearSort:hover {
+    background-color: #660198;
+    color: #ffd700;
+}
 }
 
 @media screen and (min-width: 1024px) {
@@ -178,13 +222,14 @@ li:hover {
     height: 10%;
   }
   #card img {
-      display: block;
-      margin: 10px auto;
-      border: solid 3px #ffd700;
+    display: block;
+    margin: 10px auto;
+    border: solid 3px #ffd700;
   }
 
 }
 @media screen and (min-width: 1024px) {
+
   #card {
     height: 16%;
   }
